[gd_scene load_steps=5 format=3 uid="uid://dsy4qpe84qra6"]

[ext_resource type="Script" path="res://scripts/bedroom.gd" id="1_pdonb"]
[ext_resource type="Texture2D" uid="uid://cx0bse1msnw7i" path="res://backgrounds/bedroom.png" id="2_im66e"]
[ext_resource type="Texture2D" uid="uid://cy2yqy6m3r4en" path="res://items/JobList.png" id="6_mxkxy"]
[ext_resource type="Script" path="res://scripts/JobList.gd" id="7_82qna"]

[node name="Bedroom" type="Node"]
script = ExtResource("1_pdonb")

[node name="BedroomBG" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_im66e")

[node name="JobListContainer" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.0
offset_top = -251.0
offset_right = 206.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_mxkxy")

[node name="ScrollContainer" type="ScrollContainer" parent="JobListContainer"]
layout_mode = 1
anchors_preset = -1
offset_left = 39.0
offset_top = 233.0
offset_right = 375.0
offset_bottom = 454.0

[node name="JobList" type="GridContainer" parent="JobListContainer/ScrollContainer"]
layout_mode = 2
script = ExtResource("7_82qna")

[node name="MoneyAmount" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.04
anchor_right = 0.021
anchor_bottom = 0.04
offset_left = -0.120003
offset_top = -0.200001
offset_right = 141.88
offset_bottom = 33.8
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Money: $0"

[node name="DisplayJobButton" type="TextureButton" parent="."]
offset_left = 1267.0
offset_top = 380.0
offset_right = 1485.0
offset_bottom = 634.0

[connection signal="pressed" from="DisplayJobButton" to="." method="_on_display_job_button_pressed"]
